# api_python_control-finance

./: .gitignore  README.md  api.py  pyproject.toml
gerarGrafico/: gerar.py
src/: app.py  routes.py
src/services/: graph_service.py
src/utils/: data_processing.py  helpers.py
