[tool.poetry]
name = "api-python-control-finance"
version = "0.1.0"
description = ""
authors = ["isabelle9912 <isabellesaahirah28@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
streamlit = "^1.38.0"
flask = "^3.0.3"
jsonify = "^0.5"
matplotlib = "^3.9.2"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
