[tool.poetry]
name = "api-python"
version = "0.1.0"
description = ""
authors = ["isabelle9912 <isabellesaahirah28@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
pandas = "^2.2.3"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
